fixiing navbar on mobile

--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -1,3 +1,7 @@
+.navbar-container-parent {
+  width: 100%;
+}
+
 .navbar {
   padding: 10px;
   margin-top: 15px;
@@ -131,9 +135,27 @@
 
 /* Large devices (desktops, less than 1200px) */
 @media (min-width: 0px) and (max-width: 991px) {
+  .navbar-container-parent {
+    padding: 0px 15px;
+  }
+
   .navbar {
-    width: 90%;
+    width: 100%;
     padding: 10px 4px;
+  }
+
+  .navbar-collapse {
+    padding: 10px 10px 5px 10px;
+    /* border-top: 1px solid rgba(0, 0, 0, 0.1); */
+  }
+
+  .navbar-nav {
+    text-align: center;
+  }
+
+  .nav-link {
+    margin-left: 0px;
+    padding: 10px;
   }
 }
 
